luci ssr plus: update kcptun path

--- a/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
+++ b/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
@@ -139,8 +139,8 @@ msgstr "服务端配置"
 msgid "KcpTun Enable"
 msgstr "KcpTun 启用"
 
-msgid "bin:/usr/bin/ssr-kcptun"
-msgstr "二进制文件：/usr/bin/ssr-kcptun"
+msgid "bin:/usr/bin/kcptun-client"
+msgstr "二进制文件：/usr/bin/kcptun-client"
 
 msgid "KcpTun Port"
 msgstr "KcpTun 端口"
@@ -152,7 +152,7 @@ msgid "KcpTun Password"
 msgstr "KcpTun 密码"
 
 msgid "Haven't a Kcptun executable file"
-msgstr "不存在Kcptun可执行文件，请下载Kcptun可执行文件并改名放入/usr/bin/ssr-kcptun"
+msgstr "不存在Kcptun可执行文件，请下载Kcptun可执行文件并改名放入/usr/bin/kcptun-client"
 
 msgid "Not a Kcptun executable file"
 msgstr "Kcptun可执行文件格式不正确，请确认是否正确下载了路由器对应的可执行文件"
