luci ssr plus: add global proxy mode

--- a/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
+++ b/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
@@ -185,7 +185,7 @@ msgid "Running Status"
 msgstr "运行状态"
 
 msgid "Global Client"
-msgstr "全局客户端"
+msgstr "TCP透明代理"
 
 msgid "Global SSR Server"
 msgstr "SSR服务端"
@@ -225,6 +225,9 @@ msgstr "绕过中国大陆IP模式"
 
 msgid "GFW List Mode"
 msgstr "GFW列表模式"
+
+msgid "Global Mode"
+msgstr "全局模式"
 
 msgid "Oversea Mode"
 msgstr "海外用户回国模式"
