luci-app-ssr-plus: fix spelling mistakes (#3565)
* Update PKG_RELEASE

caicaicai21 fixed the bug but didn't update the release

* pr template: add details

* Revert "Update PKG_RELEASE"

This reverts commit bb27ba7df04ca004a0a1e043c94d7bc310ce7356.

* Revert "pr template: add details"

This reverts commit ffdcb09a324a35625c58989e9bca0d91af54bd06.

* luci-app-ssr-plus: fix spelling mistakes

DNSMAQ -> DNSMASQ

--- a/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
+++ b/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
@@ -496,8 +496,8 @@ msgstr "广告屏蔽设置"
 msgid "Server failsafe auto swith and custom update settings"
 msgstr "服务器节点故障自动切换/广告屏蔽/国内IP段数据库更新设置"
 
-msgid "Support AdGuardHome and DNSMAQ format list"
-msgstr "同时支持 AdGuard Home 和 DNSMAQ 格式的过滤列表"
+msgid "Support AdGuardHome and DNSMASQ format list"
+msgstr "同时支持 AdGuard Home 和 DNSMASQ 格式的过滤列表"
 
 msgid "Enable Custom Chnroute"
 msgstr "自定义国内IP段数据库更新"
