luci-app-ssr-plus: add Netflix IP update button in status page

--- a/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
+++ b/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
@@ -280,6 +280,9 @@ msgstr "【GFW列表】数据库"
 msgid "China IP Data"
 msgstr "【国内IP段】数据库"
 
+msgid "Netflix IP Data"
+msgstr "【Netflix IP段】数据库"
+
 msgid "Records"
 msgstr "条记录"
 
