luci-app-ssr-plus: add custom Netflix IP Url (#3867)

--- a/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
+++ b/package/lean/luci-app-ssr-plus/po/zh-cn/ssr-plus.po
@@ -334,6 +334,15 @@ msgstr "启用广告屏蔽"
 msgid "adblock_url"
 msgstr "广告屏蔽订阅"
 
+msgid "Enable Custom Netflix IP Url"
+msgstr "启用自定义Netflix IP更新URL"
+
+msgid "nfip_url"
+msgstr "Netflix IP更新URL"
+
+msgid "Customize Netflix IP Url"
+msgstr "自定义Netflix IP更新URL（默认项目地址：https://github.com/QiuSimons/Netflix_IP）"
+
 msgid "Enable Process Deamon"
 msgstr "启用进程自动守护"
 
